# pexlgpl

./: LICENSE  README.md  meson.build  pexlgpl-dynamic.pc.in  pexlgpl-static.pc.in  pexlgpl.rc.in  pexlgplstaticplugins.c
data/: pexlgpl.def  pexlgpl.map
tools/: gen_pexlgpl_def.ps1
